--- a/_posts/java/2022-04-22-JDK17_GC.md
+++ b/_posts/java/2022-04-22-JDK17_GC.md
@@ -2,13 +2,13 @@
 layout: post
 read_time: true
 show_date: true
+img: images/2022-04/04-22-01.png
 title: 梳理JDK 17中GC垃圾回收器
 date: 2022-04-22 18:09:00 +0800
-categories: [JDK17, JAVA, GC, 垃圾回收器]
-tags: [JAVA, GC, 垃圾回收器]
+categories: [JAVA, GC, 垃圾回收器]
+tags: [JDK17, JAVA, GC, 垃圾回收器, ZGC, Shenandoah GC]
 toc: yes
 image_scaling: true
-img: images/2022-04/04-22-01.png
 ---
 
 JDK 17 LTS版本中GC算法梳理。
