--- a/_posts/java/2022-04-22-JDK17_GC.md
+++ b/_posts/java/2022-04-22-JDK17_GC.md
@@ -13,6 +13,6 @@ image_scaling: true
 
 JDK 17 LTS版本中GC算法梳理。
 
-<div align="center"><img src="{{site.baseurl}}images/{{page.date | date: "%Y-%m"}}/04-22-01.png" alt="JEPS"/></div>
+<div align="center"><img src="{{site.baseurl}}images/{{page.date | date: "%Y-%m"}}/04-22-01.png" alt="JEPS" class="image-click-scaling"/></div>
 
 > Shenandoah和ZGC的目前都已经实现了对应的分代算法，相信不久的JDK版本中会逐步的入准。
